; ModuleID = '/home/carl/AnghaBench/linux/drivers/xen/extr_manage.c_do_poweroff.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/xen/extr_manage.c_do_poweroff.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@system_state = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"Ignoring Xen toolstack shutdown.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @do_poweroff to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_poweroff() #0 {
  %1 = load i32, i32* @system_state, align 4
  switch i32 %1, label %6 [
    i32 130, label %2
    i32 128, label %2
    i32 129, label %4
  ]

2:                                                ; preds = %0, %0
  %3 = call i32 @orderly_poweroff(i32 1)
  br label %8

4:                                                ; preds = %0
  %5 = call i32 @orderly_poweroff(i32 0)
  br label %8

6:                                                ; preds = %0
  %7 = call i32 @pr_info(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  br label %8

8:                                                ; preds = %6, %4, %2
  ret void
}

declare dso_local i32 @orderly_poweroff(i32) #1

declare dso_local i32 @pr_info(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
